kubernetes/apps/external-services/zigbee2mqtt/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: external-services
spec:
  # selector:
  #   app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      # protocol: HTTP
      port: 8080
      # targetPort:
  type: ClusterIP
